# medicrawl

./: .gitignore  ADVANCED_IMPROVEMENTS.md  ANALYSIS.md  AUTHORS.md  CONTRIBUTING.md  README.md  README_ADVANCED.md  main.py  main_advanced.py  mypy.ini  pyproject.toml
.github/scripts/: build_shard_plan.py
.github/workflows/: crawler.yml  crawler_advanced.yml
config/: default.yaml
models/: merged.py
scrapers/: base.py  base_advanced.py
scrapers/bangladesh/: arogga.py  bddrugs.py  bddrugstore.py  bdmedex.py  dgda.py  dghs_shr.py  dims.py  lazzpharma.py  medeasy.py  medex.py  osudpotro.py
scrapers/international/: chembl.py  dailymed.py  drugs_com.py  ema.py  emc.py  epocrates.py  kegg.py  medscape.py  mims.py  openfda.py  pubchem.py  rxlist.py  rxnorm.py  webmd.py  who_eml.py
scrapers/research/: clincalc.py  drugbank.py  pharmgkb.py
scripts/: finalize_advanced.py  transform_scrapers_advanced.py  upgrade_scrapers.py
utils/: bypass.py  cache.py  change_detector.py  checkpoint.py  merger.py  metrics.py  parallel.py  storage.py
